# website-downloader

./: README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: usage.md
scripts/: run.sh
src/: config.py  crawler.py  downloader.py  logger.py  main.py  media.py  parser.py  storage.py
src/utils/: helpers.py
tests/: test_crawler.py  test_downloader.py
