[metadata]
name = website-downloader
version = 0.1.0
description = A Python application to download websites by scraping HTML, files, and media.
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/website-downloader
license = MIT

[options]
packages = find:
install_requires =
    requests
    beautifulsoup4
    lxml
    tqdm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    website-downloader = main:main_function